--- a/WarehouseEcommerce/Content/settings-bar.css
+++ b/WarehouseEcommerce/Content/settings-bar.css
@@ -1,17 +1,17 @@
 ﻿.settings-bar {
     position: fixed;
-    height: calc(100% - 340px);
-    min-height: 500px;
-    top: 250px;
-    right: -300px;
+    height: 80%;
+    min-height: 200px;
+    top: 10%;
+    right: -350px;
     margin-top: 2px;
-    width: 300px;
+    width: 350px;
     padding-top: 10px;
     border-top: none;
     background-color: #fcfcfc !important;
     border: 1px solid lightgray;
     border-radius: 5px;
-    z-index: 999;
+    z-index: 9999;
 }
 
     .settings-bar h3 {
@@ -63,4 +63,15 @@
 
 .validation-summary-valid {
     display: none;
+}
+
+#settings-bar-content,
+#settings-bar-content > #frmSettingsBar {
+    height: 100%;
+}
+
+.settings-bar-content-items {
+    padding-top: 10px;
+    height: calc(100% - 90px);
+    overflow: auto;
 }
