--- a/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Shared/_TopHeaderPartial.cshtml
@@ -16,10 +16,10 @@
             <form class="form-inline">
                 <label class="sr-only" for="searchinput">Name</label>
                 <input type="search" class="form-control search_input text-search" id="searchinput" placeholder="Search Here" />
-                <span>
+                <div class="search-box-buttons float-left">
                     <button type="button" id="serchBtnClose" class="btn btn-primary search_btn">X</i></button>
                     <button type="button" id="serchBtnico" class="btn btn-primary search_btn" onclick="SearchProductCategory();"><i class="icon-search"></i></button>
-                </span>
+                </div>
             </form>
         </div>
         <div class="nb_logowrap">
