--- a/WMS/Views/Theme/Default/WebsiteContentPages/Edit.cshtml
+++ b/WMS/Views/Theme/Default/WebsiteContentPages/Edit.cshtml
@@ -95,6 +95,15 @@
         </div>
     </div>
     <div class="input-group h-100 justify-content-center align-items-center">
+        @Html.LabelFor(model => model.IsHomePage, htmlAttributes: new { @class = "control-label col-md-4" })
+        <div class="col-md-8">
+            <div class="checkbox">
+                @Html.EditorFor(model => model.IsHomePage)
+                @Html.ValidationMessageFor(model => model.IsHomePage, "", new { @class = "text-danger" })
+            </div>
+        </div>
+    </div>
+    <div class="input-group h-100 justify-content-center align-items-center">
         @Html.Label("Image", new { @class = "col-md-4" })
         <div class="col-md-8">
             @Html.Partial("_Uploader")
