--- a/WarehouseEcommerce/Views/Theme/ElecTech/Home/Index.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Home/Index.cshtml
@@ -4,253 +4,5 @@
     ViewBag.Description = "";
 }
 
-<div class="video-banner">
-    <div class="overlay"></div>
-    <video autoplay="autoplay" muted="muted" loop="loop">
-        <source src="uploads/ganedata.mp4" type="video/mp4">
-    </video>
-    <div class="container h-100">
-        <div class="h-100 text-center align-items-center pt-70 pb-70">
-            <div class="w-100 text-white">
-                <div class="offset-lg-4 col-lg-4 background-banner">
-                    <h1 class="display-3">BusinessSense</h1>
-                    <p class="lead mb-10">Class-Leading WMS Solutions For Your Business</p>
-                    <a href="get-started" class="btn btn-group-lg custom-green">Arrange a Demonstration</a>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>
-<!-- slider-area-end-->
-<!-- What-wedo-area-start -->
-<div class="what-we-do-area pt-50 pb-50">
-    <div class="container-fluid pl-30 pr-30 custom-max-width ">
-        <div class="row">
-            <div class="col-md-12">
-                <div class="section-title">
-                    <!--<h2>What we do</h2>-->
-                    <p><strong>BusinessSense - Business Automation made simple and scalable using our powerful, Integrated Warehouse Management Software.</strong><p/><p class="p2">Designed by experts for experts - From rapid goods receipt to highly precise and efficient despatch, BusinessSense Warehouse Management Software is the ideal solution for any business looking for streamlined warehouse management.</p>
-                </div>
-            </div>
-        </div>
-        <div class="custom-service-row">
-            <a href="warehouse-management-system">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Warehouse_management.png" />
-                            </div>
-                            <h3>Warehouse Management</h3>
-                            <p>WM Sense enables maximizing throughput, whilst driving down cost with RF Mobile Computers, GoodRx…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="order-management-system">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Test_procurement.png" />
-                            </div>
-                            <h3>Order Management</h3>
-                            <p>End to End visibility, achieve complete purchasing control with improved customer communications…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="stock-control-system">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Stock_control.png" />
-                            </div>
-                            <h3>Stock Management</h3>
-                            <p>Reduce costs with precise stock level optimization, Meaning you ‘ll have the information to better match…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="epod-system">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/EPoD.png" />
-                            </div>
-                            <h3>EPoD</h3>
-                            <p>Delivering the right products to your customers at the right time is vital in maintaining high levels of customer…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
 
-        <div class="custom-service-row">
-            <a href="fleet-management-system">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Fleet_tracking.png" />
-                            </div>
-                            <h3>Fleet Tracking & Driver Management</h3>
-                            <p>Real-time vehicle tracking and route analysis. Route replay measuring driver behavior and speed…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="yard-management">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Yard_management.png" />
-                            </div>
-                            <h3>Yard Management</h3>
-                            <p>Optimize Your Yard Resources, extend the management of your distribution facility beyond the four walls…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="ecommerce">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Ecommerce.png" />
-                            </div>
-                            <h3>eCommerce</h3>
-                            <p>Integrated web trading platform for B2B or B2C”, fully response for mobile/Tablet sales. Marketplace integration…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="epos-self-service">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Epose_self_service.png" />
-                            </div>
-                            <h3>EPoS & Self Service</h3>
-                            <p>Fully integrated single resilient platform to managed your hospitality or retail store estate with support…</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-
-        <div class="custom-service-row">
-            <a href="mobile-van-sales">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Mobile_van_sales.png" />
-                            </div>
-                            <h3>Field/Van Mobile Sales</h3>
-                            <p>The latest Android mobile devices allow field staff to be operationally connected to your business at all times…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="real-time-location-system">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Asset_location.png" />
-                            </div>
-                            <h3>Asset Location</h3>
-                            <p>Asset protection and real-time tracking by deploying both Active RFID location beacons supported by current WiFi….</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="HR-time-and-attendance">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Human_resources.png" />
-                            </div>
-                            <h3>Human Resources</h3>
-                            <p>Time and Attendance with Bio-metrics, HR automation reduce the time spent on paper chasing leave requests…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="mobile-device-management">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Mobile_device_management.png" />
-                            </div>
-                            <h3>Mobile Device Management</h3>
-                            <p>Fusion UEM brings the industry-leading device management portfolio of applications – to Android …..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-        <div class="custom-service-row">
-            <a href="digital-signage">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Digital_signage.png" />
-                            </div>
-                            <h3>Digital Signage</h3>
-                            <p>Illumineye designed to make high-quality digital signage available to everyone. Ideal for retail, transportation…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="shoppertrak-business-intelligence">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Business_intelligence.png" />
-                            </div>
-                            <h3>Business Intelligence</h3>
-                            <p>ShopperTrak Provides actionable dashboards and alerts, inventory accuracy and on-floor availability products. Supply important…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="loss-prevention">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Lose_prevention.png" />
-                            </div>
-                            <h3>Loss Prevention</h3>
-                            <p>Shrink Management as a Service (SMaaS) is a cloud-based offering designed to help enhance productivity…..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-            <a href="truevue-retail-rfid-solution">
-                <div class="service-hover">
-                    <div class="single-What-wedo mb-30">
-                        <div class="What-wedo-text text-center">
-                            <div class="icon-box">
-                                <img src="~/img/solutions/Rfid.png" />
-                            </div>
-                            <h3>RFID Retail Inventory</h3>
-                            <p>TrueVue RFID Inventory & Supply Chain intelligence enables Smarter Decision Making, enable retailers to harness data and …..</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
-        </div>
-    </div>
-</div>
-<!-- What-wedo-area-end -->
+@Html.Action("_defaultPartial", "Home")
