--- a/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_defaultPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/ElecTech/Shared/_defaultPartial.cshtml
@@ -1,8 +1,8 @@
 ﻿@model Ganedata.Core.Entities.Domain.WebsiteContentPages
 @{
-    ViewBag.Title = Model.Title;
+    ViewBag.Title = Model?.Title;
 
 }
 <div>
-    @Html.Raw(Model.Content)
+    @Html.Raw(Model?.Content)
 </div>
