--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_FooterPartialArea.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_FooterPartialArea.cshtml
@@ -1,6 +1,6 @@
-﻿@using Ganedata.Core.Entities.Domain
+﻿@using Ganedata.Core.Services
 @{
-    var siteProperties = ViewBag.TenantWebsite as TenantWebsites;
+    var siteProperties = ViewBag.TenantWebsite as caTenantWebsites;
 }
 
 <footer>
