--- a/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
+++ b/WarehouseEcommerce/Views/Theme/Smart/Shared/_TopHeaderPartial.cshtml
@@ -1,6 +1,6 @@
-﻿@using Ganedata.Core.Entities.Domain
+﻿@using Ganedata.Core.Services
 @{
-    var siteProperties = ViewBag.TenantWebsite as TenantWebsites;
+    var siteProperties = ViewBag.TenantWebsite as caTenantWebsites;
 }
 <div id="top-header" class="sticky-header">
     <header class="custom-header-container smart-header">
