UI fixes + added missing page titles + website warehouses added Imported from Changeset 2576

--- a/WMS/Views/Theme/Default/ProductAllowances/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductAllowances/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Helpers
 @{
-    ViewBag.Title = "";
+    ViewBag.Title = "Product Allowance";
 }
 @section scripts {
 
