--- a/WMS/Views/Theme/Default/ApiCredentials/Edit.cshtml
+++ b/WMS/Views/Theme/Default/ApiCredentials/Edit.cshtml
@@ -13,10 +13,10 @@
 }
 
 @{
-    ViewBag.Title = "Edit";
+    ViewBag.Title = "Edit Api Credential";
 }
 
-<h2><span>Edit ApiCredential</span></h2>
+<h2><span>@ViewBag.Title</span></h2>
 
 
 @Html.Hidden("selkey", null, new { @class = "selkey" })
