--- a/WMS/Views/Theme/Default/ProductsWebsitesMaps/Index.cshtml
+++ b/WMS/Views/Theme/Default/ProductsWebsitesMaps/Index.cshtml
@@ -1,6 +1,7 @@
 ﻿@using Ganedata.Core.Entities.Helpers
 @{
     Layout = "~/Views/Theme/Default/Shared/_Layout.cshtml";
+    ViewBag.Title = "Product Website Maps";
 }
 @section scripts {
 
