--- a/WMS/Views/Theme/Default/TenantWebsites/Index.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Ganedata.Core.Entities.Helpers
 @{
-    ViewBag.Title = "";
+    ViewBag.Title = "Tenant Websites";
 }
 @section scripts {
 
