--- a/WMS/Views/Theme/Default/TenantWebsites/_TenantWebSiteList.cshtml
+++ b/WMS/Views/Theme/Default/TenantWebsites/_TenantWebSiteList.cshtml
@@ -3,7 +3,7 @@
     var grid = Html.DevExpress().GridView(settings =>
     {
         settings.Name = "TenantWebsiteGridView";
-        settings.CallbackRouteValues = new { Controller = "TenantWebsites", Action = "_TenantWebSiteList"};
+        settings.CallbackRouteValues = new { Controller = "TenantWebsites", Action = "_TenantWebSiteList" };
         settings.Width = System.Web.UI.WebControls.Unit.Percentage(100);
         settings.Settings.ShowHeaderFilterButton = false;
         settings.SettingsPopup.HeaderFilter.Height = 200;
@@ -22,15 +22,15 @@
         settings.SettingsAdaptivity.HideDataCellsAtWindowInnerWidth = 0;
         settings.Columns.Add("SiteName");
         settings.Columns.Add("HostName");
-        //settings.Columns.Add("FacebookUrl");
-        //settings.Columns.Add("TwitterUrl");
-        //settings.Columns.Add("LinkedInUrl");
-        //settings.Columns.Add("YoutubeUrl");
-        //settings.Columns.Add("InstaGramUrl");
-        //settings.Columns.Add("WebsiteContactAddress");
-        //settings.Columns.Add("WebsiteContactPhone");
-        //settings.Columns.Add("WebsiteContactEmail");
-        settings.Columns.Add(c =>
+//settings.Columns.Add("FacebookUrl");
+//settings.Columns.Add("TwitterUrl");
+//settings.Columns.Add("LinkedInUrl");
+//settings.Columns.Add("YoutubeUrl");
+//settings.Columns.Add("InstaGramUrl");
+//settings.Columns.Add("WebsiteContactAddress");
+//settings.Columns.Add("WebsiteContactPhone");
+//settings.Columns.Add("WebsiteContactEmail");
+settings.Columns.Add(c =>
         {
             c.FieldName = "ImagePath";
             c.Caption = "Logo";
@@ -52,15 +52,16 @@
         {
             var id = DataBinder.Eval(m.DataItem, "SiteID").ToString();
             ViewContext.Writer.Write
-            ("<a href='" + Url.Action("Index", "ProductsWebsitesMaps", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list' title='Product Website Map'></i></a>  " +
+            ("<a href='" + Url.Action("Index", "ProductsWebsitesMaps", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-address-book-o' title='Product Website Map'></i></a>  " +
              "<a href='" + Url.Action("Index", "WebsiteSliders", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-sliders' title='Website Slider List'></i></a>  " +
              "<a href='" + Url.Action("Index", "WebsiteNavigations", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-link' title='Website Navigation List'></i></a>  " +
              "<a href='" + Url.Action("Index", "WebsiteContentPages", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-file' title='Website Content Pages List'></i></a>" +
-             "<a href='" + Url.Action("Index", "WebsiteShippingRules", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list' title='Website Shipping Rules List'></i></a>" +
+             "<a href='" + Url.Action("Index", "WebsiteShippingRules", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-truck' title='Website Shipping Rules List'></i></a>" +
              "<a href='" + Url.Action("Index", "WebsiteVouchers", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-money' title='Website Vouchers List'></i></a>" +
              "<a href='" + Url.Action("Index", "WebsiteDiscountCodes", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-tags' title='Website Discount List'></i></a>" +
-             "<a href='" + Url.Action("Index", "ProductAllowances", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list-ol' title='Product Allowance List'></i></a>" +
-             "<a href='" + Url.Action("Index", "ProductAllowanceGroups", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-th-list' title='Product Allowance Group List'></i></a>");
+             "<a href='" + Url.Action("Index", "ProductAllowances", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-stack-exchange' title='Product Allowance List'></i></a>" +
+             "<a href='" + Url.Action("Index", "ProductAllowanceGroups", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-list' title='Product Allowance Group List'></i></a>" +
+            "<a href='" + Url.Action("Index", "ApiCredentials", new { SiteId = id }) + "' data-id='" + id + "'><i class='btn fa fa-plug' title='Api Credentials'></i></a>");
 
             if (LayoutHelpers.IsSuperUser())
             {
