--- a/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
+++ b/WMS/Views/Theme/Default/UISettings/WebsiteUISettings.cshtml
@@ -14,7 +14,11 @@
         )
 }
 
-<h2><span>Website UI Customization (@ViewBag.SiteName)</span></h2>
+@{
+    ViewBag.Title = "Website UI Customization";
+}
+
+<h2><span>@ViewBag.Title (@ViewBag.SiteName)</span></h2>
 
 @using (Html.BeginForm(null, null, FormMethod.Post, new { id = "websiteUISettings" }))
 {
@@ -36,14 +40,18 @@
 
                 <label class="col-md-8 float-left form-check-label">@Model[i].UISettingItem.DisplayName</label>
                 <div class="col-md-4 float-left">
-                    @if (Model[i].UISettingItem.InputType != UISettingItemInputType.Font) {
-                        @Html.TextBoxFor(m => m[i].Value, new { @type = (Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "Text" : Enum.GetName(typeof(UISettingItemInputType), Model[i].UISettingItem.InputType)),
-                                                                @class = Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "jscolor {hash:true, padding:4} form-control" : "form-control"})
+                    @if (Model[i].UISettingItem.InputType != UISettingItemInputType.Font)
+                    {
+                        @Html.TextBoxFor(m => m[i].Value, new
+                        {
+                            @type = (Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "Text" : Enum.GetName(typeof(UISettingItemInputType), Model[i].UISettingItem.InputType)),
+                                                                @class = Model[i].UISettingItem.InputType == UISettingItemInputType.Color ? "jscolor {hash:true, padding:4} form-control" : "form-control"
+                        })
                     }
                     else
                     {
                         @Html.DropDownListFor(m => m[i].Value, new SelectList(Enum.GetValues(typeof(UISettingFonts)).Cast<UISettingFonts>().Select(v => new { Value = v.ToString() }).ToList(), "Value", "Value", Model[i].Value),
-                                                                new { @class = "chosen-select form-control"})
+                                                                new { @class = "chosen-select form-control" })
                     }
                 </div>
                 @Html.ValidationMessageFor(model => model[i].Value, "The " + Model[i].UISettingItem.DisplayName + " field value is required.", new { @class = "col-md-12 text-danger" })
