--- a/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
+++ b/WarehouseEcommerce/Views/Theme/University/Products/_DynamicFilters.cshtml
@@ -53,7 +53,7 @@
                         </h5>
                     </div>
                     <div id="collapse2"
-                         class="collapse"
+                         class="collapse show"
                          aria-labelledby="filter2"
                          data-parent="#accordion">
                         <div class="nb_filter_body">
@@ -81,22 +81,22 @@
                             </button>
                         </h5>
                     </div>
-                <div id="collapse3"
-                     class="collapse"
-                     aria-labelledby="filter3"
-                     data-parent="#accordion">
-                    <div class="nb_filter_body">
-                        <ul class="nb_prd_filter_listouter">
-                            @foreach (var item in Model.subCategories)
-                            {
-                                string name = item.Replace(" ", "_").Replace(",", "^");
-                                <li class="list-group-item" id="type"><input type="checkbox" id="TypeS" class="checkbox-inline" title="@(item)" value="@(name)" @(Request.Url.OriginalString.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
-                            }
+                    <div id="collapse3"
+                         class="collapse show"
+                         aria-labelledby="filter3"
+                         data-parent="#accordion">
+                        <div class="nb_filter_body">
+                            <ul class="nb_prd_filter_listouter">
+                                @foreach (var item in Model.subCategories)
+                                {
+                                    string name = item.Replace(" ", "_").Replace(",", "^");
+                                    <li class="list-group-item" id="type"><input type="checkbox" id="TypeS" class="checkbox-inline" title="@(item)" value="@(name)" @(Request.Url.OriginalString.ToLower().Contains(name.ToLower()) ? "checked" : "")>@(item)</li>
+                                }
 
 
-                        </ul>
+                            </ul>
+                        </div>
                     </div>
-                </div>
                 }
                 @* Adding dynmic attributes here *@
                 @foreach (var item in Model.AttributeValues)
@@ -105,7 +105,7 @@
                     <div class="nb_filter_head" id="filter_@(item.Key)">
                         <h5 class="mb-0">
                             <button class="btn btn-link collapsed"
-                                    data-toggle="collapse_@(item.Key)"
+                                    data-toggle="collapse"
                                     data-target="#collapse_@(item.Key)"
                                     aria-expanded="true"
                                     aria-controls="collapse_@(item.Key)">
@@ -114,7 +114,7 @@
                         </h5>
                     </div>
                     <div id="collapse_@(item.Key)"
-                         class="collapse"
+                         class="collapse show"
                          aria-labelledby="filter_@(item.Key)"
                          data-parent="#accordion">
                         <div class="nb_filter_body">
