--- a/WarehouseEcommerce/Content/Theme/University/app/css/App.css
+++ b/WarehouseEcommerce/Content/Theme/University/app/css/App.css
@@ -223,7 +223,7 @@ input[type="number"]::-webkit-outer-spin-button {
         border-radius: 0px;
         height: 55px;
         border-bottom: solid 1px;
-        border-color: var(--dark-font-color);;
+        border-color: var(--dark-font-color);
         border-left: none;
         border-top: none;
         border-right: none;
